--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+annotated-types==0.7.0
 asgiref==3.8.1
+attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
 beautifulsoup4==4.12.3
 cffi==1.16.0
 channels==4.1.0
+constantly==23.10.4
 crispy-bootstrap5==2024.2
 cryptography==42.0.7
+daphne==4.1.2
 Django==4.2.13
 django-bootstrap-v5==1.0.11
 django-bootstrap5==24.2
@@ -12,15 +18,35 @@ django-cors-headers==4.4.0
 django-crispy-forms==2.1
 django-crontab==0.7.1
 django-excel-response==2.0.5
+django-flatpickr==2.0.3
 django-fontawesome-5==1.0.18
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 et-xmlfile==1.1.0
 fontawesomefree==6.5.1
+hyperlink==21.0.0
+idna==3.7
+incremental==22.10.0
 jdcal==1.4.1
 openpyxl==2.4.11
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
+pydantic==2.8.2
+pydantic-settings==2.3.4
+pydantic_core==2.20.1
+PyJWT==2.8.0
 PyMySQL==1.1.0
+pyOpenSSL==24.1.0
+python-dotenv==1.0.1
 pytz==2024.1
+service-identity==24.1.0
+setuptools==70.1.1
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.5.0
+Twisted==24.3.0
+txaio==23.1.1
+typing_extensions==4.12.2
+whitenoise==6.7.0
+zope.interface==6.4.post2
