--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,6 @@ txaio==23.1.1
 typing_extensions==4.12.2
 whitenoise==6.7.0
 zope.interface==6.4.post2
+
+python-dateutil~=2.9.0.post0
+twilio~=9.2.3
