--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
 beautifulsoup4==4.12.3
-cffi==1.16.0
+cffi>=1.16.0
 channels==4.1.0
 constantly==23.10.4
 crispy-bootstrap5==2024.2
@@ -20,7 +20,7 @@ django-crontab==0.7.1
 django-excel-response==2.0.5
 django-flatpickr==2.0.3
 django-fontawesome-5==1.0.18
-djangorestframework==3.14.0
+djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 et-xmlfile==1.1.0
 fontawesomefree==6.5.1
