--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
 jdcal==1.4.1
-openpyxl==2.4.11
+openpyxl>=2.4.11
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
